# llm-fux

./: .env.example  .gitignore  LICENSE  Makefile  README.md  config.yaml  config.yaml.example  pyproject.toml  pytest.ini
data/fux-counterpoint/prompts/: prompt.md
data/guides/: LLM-Guide.md  Pierre-Guide.md
data/guides/four-versus-one/: 4vs1_v1.0.txt
data/guides/one-versus-one/: 1vs1_v1.1.txt  1vs1_v1.2.txt
data/guides/two-versus-one/: 2vs1_v1.0.txt  2vs1_v1.5.txt
data/prompts/: prompt.md  prompt_above.md  prompt_above_1vs1.md  prompt_above_4vs1.md  prompt_below.md  prompt_below_1vs1.md  prompt_below_2vs1.md  prompt_below_4vs1.md  system_prompt.txt
data/prompts/base/: base_abc.txt  base_humdrum.txt  base_mei.txt  base_musicxml.txt
docs/: LLM-AGENT-GUIDE.md  README.md  adding-questions.md  api-reference.md  configuration.md  development.md  examples.md  installation.md  musicologist-guide.md  quickstart.md  research.md  troubleshooting.md
outputs/: .gitkeep
src/llm_fux/: __init__.py
src/llm_fux/cli/: __init__.py  run_batch.py  run_configured.py  run_experiment.py  run_single.py
src/llm_fux/config/: __init__.py  config.py  (+1 more)
tests/: README.md  __init__.py  conftest.py  test_cli_batch.py  test_cli_contract.py  test_cli_model_detection.py  test_comprehensive.py  test_dispatcher.py  test_dispatcher_contract.py  test_integration.py  test_model_detection.py  test_models.py  test_models_contract.py  test_path_utils.py  test_prompt_building.py  test_prompt_contract.py  test_runner.py  test_runner_contract.py  test_text_utils.py  test_utils_contract.py
(+73 files in other folders)
